# MachineLearningImplementations

./: CMakeLists.txt  python_tst_np.py  python_tst_pt.py
include/: BaseLayer.hpp  Perceptron.hpp  Softmax.hpp  Tensor.hpp
src/: main.cpp
